--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
+	 <maven.compiler.source>1.7</maven.compiler.source>
+	 <maven.compiler.target>1.7</maven.compiler.target>
+	 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -176,6 +179,23 @@
 		</dependency>
 	</dependencies>
 	<build>
-		
+	 <plugins>
+	  <plugin>
+	   <groupId>org.apache.maven.plugins</groupId>
+	   <artifactId>maven-compiler-plugin</artifactId>
+	   <version>2.3.2</version>
+	   <configuration>
+	    <encoding>${project.build.sourceEncoding}</encoding>
+	   </configuration>
+	  </plugin>
+	  <plugin>
+	   <groupId>org.apache.maven.plugins</groupId>
+	   <artifactId>maven-resources-plugin</artifactId>
+	   <version>2.4.3</version>
+	   <configuration>
+	    <encoding>${project.build.sourceEncoding}</encoding>
+	   </configuration>
+	  </plugin>
+	 </plugins>
 	</build>
 </project>
