--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,13 @@
             <artifactId>solr-solrj</artifactId>
             <version>4.3.1</version>
         </dependency>
+        
+        <!--图片颜色截取-->
+        <dependency>
+            <groupId>me.croma</groupId>
+            <artifactId>colors</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
